--- a/docassemble/LLAW33012022S1EZL1/data/questions/EL_Taxation.yml
+++ b/docassemble/LLAW33012022S1EZL1/data/questions/EL_Taxation.yml
@@ -1,85 +1,1 @@
----
-question: Is the matter relating to a business?
-subquestion: |
-  Select 'no' if it is an individual concern.
-yesno: EL_Taxation_isBusiness
----
-question: What is your business type?
-fields:
-  - no label: EL_Taxation_businessType
-    datatype: radio
-    choices:
-      - Sole Trader 
-      - Company 
-      - Partnership 
-      - Trust 
-      - Non-Profit Organisation 
-      - Other
-  - Please specify: EL_Taxation_businessTypeOther
-    js show if: |
-      val("EL_Taxation_businessType") == "Other"
----
-question: What is your area of concern?
-subquestion: |
-  Please select all that apply
-fields:
-  - no label: EL_Taxation_concernArea
-    datatype: checkboxes
-    choices:
-      - Compliance 
-      - Audit/Intervention 
-      - GST 
-      - Employment 
-      - Sale of Business/Merger/Takeover 
-      - Distribution of Profits 
-      - Deductions 
-      - COVID Assistance/JobKeeper 
-      - Superannuation-Banking 
-      - Succession Planning 
-      - New Company set-up 
-      - Other
-    none of the above: False
-  - Please specify: EL_Taxation_concernAreaOther
-    js show if: |
-      val("EL_Taxation_concernArea['Other']")
----
-question: Have you been contacted by the Australian Taxation Office (ATO) advising you that an Audit is taking place?
-yesno: EL_Taxation_AuditOccuring
----
-question: Have you been audited before by the ATO?
-fields:
-  - no label: EL_Taxation_AuditedBefore
-    datatype: yesnoradio
-  - Year: EL_Taxation_previousAuditYear
-    datatype: integer
-    minlength: 4
-    maxlength: 4
-    show if: EL_Taxation_AuditedBefore
----
-question: What does your matter concern?
-subquestion: |
-  Please select all that apply
-fields:
-  - no label: EL_Taxation_GST_Area
-    datatype: checkboxes
-    choices:
-      - Business Activity Statements (BAS)
-      - Payments 
-      - Classification 
-      - Income Tax
-      - Other
-    none of the above: False
-  - Please specify: EL_Taxation_GST_areaOther
-    js show if: |
-      val("EL_Taxation_GST_Area['Other']")
----
-question: Are there any other relevant details? 
-subquestion: |
-  Is there anything else you would like us to be aware of regarding the matter?
-fields: 
-  - no label: EL_Taxation_moreDetailsProvided
-    datatype: yesnoradio
-  - Please specify:  EL_Taxation_moreDetails
-    input type: area
-    show if: EL_Taxation_moreDetailsProvided
----
+# empty
