--- a/docassemble/LLAW33012022S1EZL1/data/questions/EL_Main.yml
+++ b/docassemble/LLAW33012022S1EZL1/data/questions/EL_Main.yml
@@ -231,6 +231,9 @@ code: |
     # check if user has documents they want to upload and store them if so
     if EL_hasSupportingDocs:
       EL_supportingDocs
+      # obtain caption for each attachment 
+      for doc in EL_supportingDocs: 
+        doc.caption
     #### Supporting Documentation Section END ####
     ##############################################
     
