fix styling and back button placement

--- a/docassemble/LLAW33012022S1EZL1/data/questions/EL_ITandDataPrivacy.yml
+++ b/docassemble/LLAW33012022S1EZL1/data/questions/EL_ITandDataPrivacy.yml
@@ -3,4 +3,5 @@ question: Does the matter concern a data breach?
 fields:
   - no label: EL_IT_isDataBreach
     datatype: yesnoradio
+    default: True
 ---
