--- a/docassemble/LLAW33012022S1EZL1/data/questions/EL_FishingFarmingAquaculture.yml
+++ b/docassemble/LLAW33012022S1EZL1/data/questions/EL_FishingFarmingAquaculture.yml
@@ -1,5 +1,5 @@
 ---
-question: What is your industry?
+question: Which industry do you operate in?
 subquestion: |
   Please select all that apply
 fields:
